# ai-tanchishe

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  snake.py  test_logic.py  test_snake.py
